 * Added a section in the INSTALL file for developers building their own
   Luminotes Desktop installer.
 * Added missing tools/usb_luminotes.sh for launching Luminotes Desktop from a
   USB drive on Linux.
 * Now stripping certain invisible placeholder characters from print version
   of Luminotes notebooks. These characters could show up when copy and pasted
   into another application.

1.6.17: July 26, 2009
 * Fixed a bug that caused ever-growing notes in Internet Explorer 8.

1.6.16: July 14, 2009
 * Fixed a bug that prevented the new note button from working in Internet
   Explorer. This fixes Luminotes support for Internet Explorer 8.

1.6.15: July 12, 2009
 * No longer charging for Luminotes Desktop or offering subscription signups.
 * Fixed a Firefox 3.5 bug in which after ending a link ctrl-L, typed text
   ended up as part of the link. Now, ctrl-L properly ends the link and any
   typed text after the link does not become linked itself.
 * Fixed a Firefox 3.5 bug in which bold mode (or italics mode) would
   inexplicably end after typing a few characters.
 * Fixed a Firefox 3.5 bug in which spacing at the top of each note changed
   when a note was focused.
 * Fixed an Internet Explorer 8 bug in which the toolbar was positioned
   incorrectly. Note that as of this release, there are a number of other
   Internet Explorer 8 issues.

1.6.14: June 14, 2009
 * Fixed a bug in which some printed or exported notes appeared in
   alphabetical order instead of your chosen ordering.

1.6.13: May 20, 2009
 * Added a dynamic preview of your current color selections to the color
   picker. This lets you see what the selected colors will look like as you
   are selecting them.
 * Made the color picker stay open after a color is selected. This makes it
   easier to set both foreground and background colors.
 * Fixed a Chrome/Safari bug in which popups such as those for export and
   color were not positioned correctly if the page was scrolled past the top.