@@ -8,6 +8,8 @@
  * Now stripping certain invisible placeholder characters from print version
    of Luminotes notebooks. These characters could show up when copy and pasted
    into another application.
+ * New "-w" option to luminotes.py that prevents web browser from opening when
+   Luminotes Desktop is started. Patch from Pete Burgers.
 
 1.6.17: July 26, 2009
  * Fixed a bug that caused ever-growing notes in Internet Explorer 8.
